k8s/domains/identity/infra/ui/base/identity-ui-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: identity-ui-public-security-headers
spec:
  headers:
    contentTypeNosniff: true
    frameDeny: true
    referrerPolicy: no-referrer
    stsSeconds: 31536000
    stsIncludeSubdomains: false

---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: identity-ui-public-rate-limit
spec:
  rateLimit:
    average: 100
    period: 1s
    burst: 200

---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: identity-ui-public-concurrency-limit
spec:
  inFlightReq:
    amount: 100

---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: identity-ui-public
spec:
  chain:
    middlewares:
      - name: identity-ui-public-security-headers
      - name: identity-ui-public-rate-limit
      - name: identity-ui-public-concurrency-limit
